# udacity-school-of-AI

./: LICENSE  README.md  predict.py  train.py
AI programming with python/: read.me
AI programming with python/Dogbreed Classifier/: README.md
AIND/3) Build an Adversarial Game Playing Agent/: alpha_beta.py  jwt  mcts.py  my_custom_player.py
C++/1) Build an OpenStreetMap Route Planner/: fsm.osm
C++/3) Memory Management Chatbot/: CMakeLists.txt
C++/4) C++ Capstone Project/: CMakeLists.txt  README.md
C++/4) C++ Capstone Project/src/: controller.cpp  game.cpp  game.h  levels.cpp  main.cpp  obstacle.cpp  obstacle.h  renderer.cpp  renderer.h  scoreBoard.cpp  scoreBoard.h  snake.cpp  snake.h
C++/src/: main.cpp  route_planner.h
Computer Vision/1) Facial Keypoint Detection/: 1. Load and Visualize Data.ipynb  3. Facial Keypoint Detection, Complete Pipeline.ipynb
Computer Vision/2)  Image Captioning/: 0_Dataset.ipynb  1_Preliminaries.ipynb  2_Training.ipynb  3_Inference.ipynb  training_log.txt
Computer Vision/3) Landmark Detection & Tracking (SLAM)/: 2. Omega and Xi, Constraints.ipynb  3. Landmark Detection and Tracking.ipynb  4. Zip Your Project Files and Submit.ipynb
Data Scientist/2) Create Your Own Image Classifier/: predict.py  train.py
Data Scientist/3) Creating Customer Segments with Arvato/: Identify_Customer_Segments.ipynb
Data Scientist/6) Recommendations with IBM/: Recommendations_with_IBM.ipynb
Deep Learning/: README.md
Deep Learning/1) Predict Bike Sharing Data/: Project Predicting Bike-Sharing Patterns review .html  requirements.txt  (+2 more)
(+84 files in other folders)
